--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,16 @@ a {
   text-decoration: none;
   color: inherit;
 }
+
+.light {
+  background-color: white;
+  color: #111;
+}
+.dark {
+  background-color: #111;
+  color: #bbb;
+}
+
 .container {
   max-width: 1366px;
   min-height: 100vh;
